# macro-serde

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
json_example/: Cargo.toml  main.rs
json_example/src/: main.rs
macroserde/: Cargo.toml
macroserde-json/: Cargo.toml
macroserde-json/src/: lib.rs
macroserde-msgpack/: Cargo.toml
macroserde-msgpack/src/: lib.rs
macroserde/src/: macros.rs
macroserde/src/de/: impls.rs  mod.rs  traits.rs
macroserde/src/ser/: impls.rs  mod.rs  traits.rs
src/: const_assert.rs  lib.rs  macros.rs  main.rs
src/de/: impls.rs  mod.rs  place.rs  traits.rs
src/ser/: impls.rs  traits.rs
