[package]
name = "serde"
version = "0.1.0"
authors = ["Steven Le Rouzic <steven.lerouzic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serde"
path = "src/lib.rs"

[[bin]]
name = "json_example"
path = "json_example/main.rs"

